# Desktop_Organizer

./: .gitignore  CMakeLists.txt  README.md  resources.qrc
qml/: DesktopTag.qml  FancyTextField.qml  Main.qml  Main_bad.qml
src/: filehandler.h  main.cpp
